# lamb

./: .gitignore  AST.hs  Interp.hs  LICENSE  Lamb.hs  Parser.hs  README.md  ast.hs  interp.hs  lamb.cabal  lamb.hs  parser.hs  parser2.hs
examples/: association_list.lamb  at.lamb  cons.lamb  countdown.lamb  factorial.lamb  helloworld.lamb  hibye.lamb  listlength.lamb  listsum.lamb  loop.lamb  map.lamb  ref.lamb
examples/monads/: identity_monad.lamb  maybe_monad.lamb  state_monad.lamb
mods/std/: base64.lamb  basic.lamb  http.lamb  list.lamb  op.lamb  str.lamb
std/: math.lamb  op.lamb
